Read more about kernel namespaces and decided to go ahead with seperate object files

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@ MODULES_DIR := /lib/modules/$(shell uname -r)
 KERNEL_DIR := ${MODULES_DIR}/build
 
 obj-m += xt_ts3init.o
+xt_ts3init-objs += ts3init_module.o ts3init_match.o ts3init_cookie.o siphash24.o
 
 all:
 	make -C ${KERNEL_DIR} M=$$PWD;
