--- a/src/Makefile
+++ b/src/Makefile
@@ -3,17 +3,20 @@ MODULES_DIR := /lib/modules/$(shell uname -r)
 KERNEL_DIR := ${MODULES_DIR}/build
 
 obj-m += xt_ts3init.o
-xt_ts3init-objs += ts3init_module.o ts3init_match.o ts3init_cookie.o siphash24.o
+xt_ts3init-objs += ts3init_module.o ts3init_match.o ts3init_cookie.o ts3init_target.o siphash24.o
+so = libxt_ts3init_get_cookie.so libxt_ts3init_get_puzzle.so libxt_ts3init_reset.so 
 
 all:
-	make -C ${KERNEL_DIR} M=$$PWD;
+	$(MAKE) -C ${KERNEL_DIR} M=$$PWD;
+	$(MAKE) -f Makefile.xtables $(so)
 
 modules:
-	make -C ${KERNEL_DIR} M=$$PWD $@;
+	$(MAKE) -C ${KERNEL_DIR} M=$$PWD $@;
 
 modules_install:
-	make -C ${KERNEL_DIR} M=$$PWD $@;
+	$(MAKE) -C ${KERNEL_DIR} M=$$PWD $@;
 
 clean:
-	make -C ${KERNEL_DIR} M=$$PWD $@;
+	$(MAKE) -C ${KERNEL_DIR} M=$$PWD $@;
+	rm $(so)
 
