--- a/src/Makefile.xtables
+++ b/src/Makefile.xtables
@@ -1,5 +1,5 @@
 CFLAGS = -O2 -Wall
-LIBS = libxt_ts3init_get_cookie.so libxt_ts3init_get_puzzle.so libxt_ts3init_reset.so 
+LIBS = libxt_ts3init_get_cookie.so libxt_ts3init_get_puzzle.so libxt_TS3INIT_RESET.so libxt_TS3INIT_SET_COOKIE.so 
 
 all: $(LIBS)
 
