added CONFIG_CRYPTO_HASH_INFO check. fixes missing hash_algo_name symbol

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ KERNEL_DIR := ${MODULES_DIR}/build
 
 obj-m += xt_ts3init.o
 xt_ts3init-objs += ts3init_module.o ts3init_match.o ts3init_cookie.o ts3init_target.o ts3init_cache.o siphash24.o
+ccflags-$(CONFIG_CRYPTO_HASH_INFO) += -DHAS_CRYPTO_HASH_INFO=1
 
 all:
 	$(MAKE) -C ${KERNEL_DIR} M=$$PWD;
