--- a/src/Makefile.xtables
+++ b/src/Makefile.xtables
@@ -18,7 +18,7 @@ install:
 	fi
 
 lib%.so: lib%.o
-	gcc -shared -fPIC -o $@ $^;
+	gcc -shared -fPIC -lxtables -o $@ $^;
 
 lib%.o: lib%.c
 	gcc ${CFLAGS} -D_INIT=lib$*_init -fPIC -c -o $@ $<;
